--- a/clase-04-10/apuntes2.html
+++ b/clase-04-10/apuntes2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="position.css">
+    <link rel="stylesheet" href="apuntes2.css">
 </head>
 
 <body>
@@ -56,12 +56,15 @@
         temporibus quam perspiciatis incidunt! Asperiores molestias repudiandae tenetur blanditiis aliquid, suscipit ea
         laboriosam itaque!</p>
 
-    <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit atque ipsum eos id, laudantium, recusandae repudiandae blanditiis sit aut debitis sequi. Obcaecati expedita esse provident vero repellat corporis quos quis?</p>
-        <div>
-            <h2>Lorem.</h2>
-            <div class="box"></div>
-        </div>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero autem explicabo ex quidem quibusdam amet ab illum, aliquam, rerum tenetur, nisi officiis ea! Enim inventore quaerat eius eum voluptas quasi.</p> -->
+    <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit atque ipsum eos id, laudantium, recusandae
+        repudiandae blanditiis sit aut debitis sequi. Obcaecati expedita esse provident vero repellat corporis quos
+        quis?</p>
+    <div class="contenedor-relativo">
+        <div class="box"></div>
+        <h2>Lorem.</h2>
+    </div>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero autem explicabo ex quidem quibusdam amet ab
+        illum, aliquam, rerum tenetur, nisi officiis ea! Enim inventore quaerat eius eum voluptas quasi.</p> -->
 
     <div class="box-animation"></div>
 </body>
